Added Website Icon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="spyro/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="spyro/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="spyro/favicon-16x16.png">
+    <link rel="manifest" href="spyro/site.webmanifest">
 </head>
 
 <body>
@@ -31,24 +36,28 @@
             <br> <br> <br>
             <div class="links">
                 <div class="link">
-                    <a href="https://github.com/spyrosigma" target="_blank"><img src="github.png" alt="GitHub" width="50px" height="50px" style="border-radius: 15px;"></a>
+                    <a href="https://github.com/spyrosigma" target="_blank"><img src="github.png" alt="GitHub"
+                            width="50px" height="50px" style="border-radius: 15px;"></a>
                 </div>
                 <div class="link">
-                    <a href="https://linkedin.com/in/spyrosigma" target="_blank"><img src="blacklinkedin.png" alt="linkedIn" width="50px" height="50px" style="border-radius: 15px;"></a>
+                    <a href="https://linkedin.com/in/spyrosigma" target="_blank"><img src="blacklinkedin.png"
+                            alt="linkedIn" width="50px" height="50px" style="border-radius: 15px;"></a>
                 </div>
                 <div class="link">
-                    <a href="https://twitter.com/spyrosigma" target="_blank"><img src="xblack.jpg" alt="X/twitter" width="50px" height="50px" style="border-radius: 15px;"></a>
+                    <a href="https://twitter.com/spyrosigma" target="_blank"><img src="xblack.jpg" alt="X/twitter"
+                            width="50px" height="50px" style="border-radius: 15px;"></a>
                 </div>
                 <div class="link">
                     <a href="https://www.instagram.com/satyam._.pvvt " target="_blank">
-                        <img src="instagram.jpg" alt="Insta" width="50px" height="auto" style="border-radius: 15px;" name="insta">
+                        <img src="instagram.jpg" alt="Insta" width="50px" height="auto" style="border-radius: 15px;"
+                            name="insta">
                     </a>
                 </div>
             </div>
             <br>
-            My Tech Stack : 
+            My Tech Stack :
             <ul>
-                <li>FrontEnd : HTML, CSS, JavaScript, Bootstrap </li>      
+                <li>FrontEnd : HTML, CSS, JavaScript, Bootstrap </li>
                 <li>Backend : Python, MySQL, Django</li>
                 <li>Computer Vision with YOLOv8</li>
                 <li>Gen-AI with Google Gemini</li>
