--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
                 and... <b style="font-size: large;"> BooM &#128165;</b>, suddenly everything starts to click ! </span>
             <br> <br> <br>
             <div class="links">
-                <div class="link">
+                <div class="link github">
                     <a href="https://github.com/spyrosigma" target="_blank"><img src="github.png" alt="GitHub"
                             width="50px" height="50px" style="border-radius: 15px;"></a>
                 </div>
-                <div class="link">
+                <div class="link linkedin">
                     <a href="https://linkedin.com/in/spyrosigma" target="_blank"><img src="blacklinkedin.png"
                             alt="linkedIn" width="50px" height="50px" style="border-radius: 15px;"></a>
                 </div>
-                <div class="link">
+                <div class="link twitter">
                     <a href="https://twitter.com/spyrosigma" target="_blank"><img src="xblack.jpg" alt="X/twitter"
                             width="50px" height="50px" style="border-radius: 15px;"></a>
                 </div>
-                <div class="link">
+                <div class="link insta">
                     <a href="https://www.instagram.com/satyam._.pvvt " target="_blank">
                         <img src="instagram.jpg" alt="Insta" width="50px" height="auto" style="border-radius: 15px;"
                             name="insta">
@@ -64,6 +64,7 @@
             </ul>
         </div>
     </div>
+       
 </body>
 
 </html>
