fixed Some things, Added Resume

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="about">
             <h1>
                 Hi, my name is
-                <a href="https://bento.me/spyrosigma" target="_blank">
+                <a href="https://drive.google.com/file/d/1bO_xD-bfqVIqfuUwJNbOKRnmxqIM3leK/view?usp=sharing" target="_blank">
                     <span class="name">
                         Satyam Namdev
                     </span>
@@ -36,25 +36,25 @@
             <br> <br> <br>
             <div class="links">
                 <div class="link github">
-                    <a href="https://github.com/spyrosigma" target="_blank"><img src="github.png" alt="GitHub"
+                    <a href="https://github.com/spyrosigma" target="_blank" class="icons"><img src="github.png" alt="GitHub"
                             width="50px" height="50px" style="border-radius: 15px;"></a>
                 </div>
                 <div class="link linkedin">
-                    <a href="https://linkedin.com/in/spyrosigma" target="_blank"><img src="blacklinkedin.png"
+                    <a href="https://linkedin.com/in/spyrosigma" target="_blank" class="icons"><img src="blacklinkedin.png"
                             alt="linkedIn" width="50px" height="50px" style="border-radius: 15px;"></a>
                 </div>
                 <div class="link twitter">
-                    <a href="https://twitter.com/spyrosigma" target="_blank"><img src="xblack.jpg" alt="X/twitter"
+                    <a href="https://twitter.com/spyrosigma" target="_blank" class="icons"><img src="xblack.jpg" alt="X/twitter"
                             width="50px" height="50px" style="border-radius: 15px;"></a>
                 </div>
                 <div class="link insta">
-                    <a href="https://www.instagram.com/satyam._.pvvt " target="_blank">
+                    <a href="https://www.instagram.com/satyam._.pvvt " target="_blank" class="icons">
                         <img src="instagram.jpg" alt="Insta" width="50px" height="auto" style="border-radius: 15px;"
                             name="insta">
                     </a>
                 </div>
             </div>
-            <br>
+            <br> <br>
             My Tech Stack :
             <ul>
                 <li>FrontEnd : HTML, CSS, JavaScript, Bootstrap </li>
@@ -64,7 +64,6 @@
             </ul>
         </div>
     </div>
-       
 </body>
 
 </html>
