--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </a>
             </h1>
             <span>Human brain is a universal <b>Machine Learning Model</b>, feed it with enough data for some time
-                and... <b style="font-size: large;"> BooM &#128165;</b>, suddenly everything starts to click ! </span>
+                and... <b style="font-size: large;"> BooM &#128165;</b>, suddenly everything starts to <a href="https://bento.me/spyrosigma" target="_blank" class="click">click ! </a></span>
             <br> <br> <br>
             <div class="links">
                 <div class="link github">
@@ -58,9 +58,10 @@
             My Tech Stack :
             <ul>
                 <li>FrontEnd : HTML, CSS, JavaScript, Bootstrap </li>
-                <li>Backend : Python, MySQL, Django</li>
+                <li>Backend : Python, MySQL, Django, Flask</li>
                 <li>Computer Vision with YOLOv8</li>
                 <li>Gen-AI with Google Gemini</li>
+                <li>LLM training with LangChain</li>
             </ul>
         </div>
     </div>
