checking out deployment

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
             </ul>
         </div>
     </div>
+    <script>
+        import { inject } from '@vercel/analytics';
+        inject();
+    </script>
 </body>
 
 </html>
