checking out deployment

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         </div>
     </div>
     <script>
-        import { inject } from '@vercel/analytics';
-        inject();
+        window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
     </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 
 </html>
