--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="myself">
         <div class="myimage">
-            <img src="myimg.png" alt="IIT Madras Research Park Photo" class="circle-image">
+            <img src="myimg.jpg" alt="IIT Madras Research Park Photo" class="circle-image">
         </div>
         &nbsp;&nbsp;&nbsp;&nbsp;
         <div class="about">
